tg 开机菜单支持